--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,10 +9,13 @@ on:
   push:
     branches:
       - main
-      - master
     tags:
       - '*'
   pull_request:
+    branches:
+      - main
+    paths-ignore:
+      - '*.md'
   workflow_dispatch:
 
 permissions:
