--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,12 @@ classifiers = [
 ]
 dynamic = ["version"]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.4",
+]
+
 [tool.maturin]
+# module-name = "denopy._denopy"
 features = ["pyo3/extension-module"]
 exclude = [".gitignore", ".github/**/*"]
