--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         shell: bash
         run: |
           set -e
-          pip install denopy --find-links dist --force-reinstall
+          pip install denopy --find-links dist --no-index --force-reinstall
           pip install pytest
           pytest
       - name: pytest
@@ -65,7 +65,7 @@ jobs:
             pip3 install -U pip pytest
           run: |
             set -e
-            pip3 install denopy --find-links dist --force-reinstall
+            pip3 install denopy --find-links dist --no-index --force-reinstall
             pytest
 
   windows:
@@ -95,7 +95,7 @@ jobs:
         shell: bash
         run: |
           set -e
-          pip install denopy --find-links dist --force-reinstall
+          pip install denopy --find-links dist --no-index --force-reinstall
           pip install pytest
           pytest
 
@@ -125,7 +125,7 @@ jobs:
         shell: bash
         run: |
           set -e
-          pip install denopy --find-links dist --force-reinstall
+          pip install denopy --find-links dist --no-index --force-reinstall
           pip install pytest
           pytest
 
