--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,13 @@
 name = "denopy"
 version = "0.4.0"
 edition = "2021"
+description = "Bare-minimum binding of deno_core, for embedding JavaScript in Python."
+homepage = "https://github.com/ubolonton/denopy"
 authors = [
     "Tuấn-Anh Nguyễn <ubolonton@gmail.com>",
 ]
+license = "BSD-3-Clause"
+readme = "README.md"
 
 [lib]
 name = "denopy"
