--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,10 +101,14 @@ jobs:
           pytest
 
   macos:
-    runs-on: macos-latest
     strategy:
       matrix:
-        target: [x86_64, aarch64]
+        include:
+          - os: macos-12
+            target: x86_64
+          - os: macos-latest
+            target: aarch64
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -122,7 +126,6 @@ jobs:
           name: wheels
           path: dist
       - name: pytest
-        if: ${{ !startsWith(matrix.target, 'aarch64') }}
         shell: bash
         run: |
           set -e
